[package]
name = "wolfhsm-src"
version = "0.1.4"
edition = "2024"
rust-version = "1.85"
description = "Compile wolfHSM from source for use by wolfhsm-sys"
license = "GPL-3.0-only OR LicenseRef-wolfSSL-commercial"
repository = "https://github.com/wolfSSL/wolfssl-rs"
readme = "README.md"
links = "wolfhsm_src"
include = [
    "src/**",
    "build.rs",
    "README.md",
    "Cargo.toml",
]

[features]
## Enable SHE (Secure Hardware Extension) AutoSAR automotive key management.
## Requires the linked wolfSSL to have AES, CMAC, WOLFSSL_AES_DIRECT, HAVE_AES_ECB.
she = []

[build-dependencies]
cc = { workspace = true }
