[package]
name = "wolfhsm"
version = "0.1.0"
edition = "2021"
description = "Rust bindings to wolfHSM"
license = "GPL-3.0-only OR LicenseRef-wolfSSL-commercial"
repository = "https://github.com/wolfSSL/wolfssl-rs"

[features]
## Enable ML-DSA (Dilithium) key support.
## Requires the linked wolfSSL to be built with HAVE_DILITHIUM.
mldsa = []

[dependencies]
wolfhsm-sys = { version = "0.1.0", path = "../wolfhsm-sys" }
wolfcrypt-sys = { version = "0.1.2", path = "../wolfcrypt-sys" }

[dev-dependencies]
hex-literal = "0.4"
sha2        = "0.10"
p256        = { version = "0.13", features = ["ecdsa", "ecdh", "pkcs8"] }
ed25519-dalek = "2"
x25519-dalek  = { version = "2", features = ["static_secrets"] }
rand        = "0.8"
