[package]
name = "wolfhsm"
version = "0.1.0"
edition = "2021"
description = "Rust bindings to wolfHSM"
license = "GPL-3.0-only OR LicenseRef-wolfSSL-commercial"
repository = "https://github.com/wolfSSL/wolfssl-rs"

[features]
## Enable ML-DSA (Dilithium) key support.
## Requires the linked wolfSSL to be built with HAVE_DILITHIUM.
mldsa = []

## Enable certificate management (wh_Client_Cert* API).
cert = []

## Enable authentication and user management (wh_Client_Auth* API).
auth = []

## Enable SHE (Secure Hardware Extension) AutoSAR automotive key management.
## Requires AES, CMAC, WOLFSSL_AES_DIRECT, HAVE_AES_ECB in the linked wolfSSL.
she = ["wolfhsm-sys/she"]

[dependencies]
wolfhsm-sys = { version = "0.1.0", path = "../wolfhsm-sys" }
wolfcrypt-sys = { version = "0.1.2", path = "../wolfcrypt-sys" }

[dev-dependencies]
hex-literal = "0.4"
sha2        = "0.10"
p256        = { version = "0.13", features = ["ecdsa", "ecdh", "pkcs8"] }
ed25519-dalek = "2"
x25519-dalek  = { version = "2", features = ["static_secrets"] }
rand        = "0.8"
rsa         = "0.9"
