[package]
name = "wolfssl-src"
authors = ["WolfSSL Inc"]
version = "0.1.1"
edition = "2021"
description = "Compile wolfSSL from source for use by wolfcrypt-sys"
license = "MIT"
homepage = "http://wolfssl.com"
repository = "https://github.com/wolfSSL/wolfssl-rs"
readme = "README.md"
keywords = ["wolfcrypt", "wolfssl", "fips", "cryptography"]
categories = ["cryptography"]

[features]
default = []
# Use the minimal bare-metal user_settings_riscv.h instead of the full
# user_settings.h.  Intended for riscv32imc-unknown-none-elf targets.
riscv-bare-metal = []

[dependencies]
cc = { version = "1.2.26", features = ["parallel"] }

[dev-dependencies]
tempfile = "3"
