[package]
name = "wolftpm"
version = "0.2.0"
edition = "2021"
rust-version = "1.71"
description = "Rust bindings to wolfTPM"
license = "GPL-3.0-only OR LicenseRef-wolfSSL-commercial"
repository = "https://github.com/wolfSSL/wolfssl-rs"
readme = "README.md"

[features]
## Enable Linux /dev/tpm0 kernel driver transport.
linux-dev = ["wolftpm-sys/linux-dev"]

## Enable software TPM socket transport (for swtpm / IBM TPM2 simulator).
swtpm = ["wolftpm-sys/swtpm"]

[dependencies]
wolftpm-sys = { version = "0.2.0", path = "../wolftpm-sys" }

[dev-dependencies]
# Independent oracle for sign_verify test: verify TPM-produced ECDSA signatures
# using a pure-Rust P-256 implementation to confirm cross-implementation correctness.
p256 = { version = "0.13", features = ["ecdsa"] }
